[gd_scene load_steps=21 format=3 uid="uid://cpjc8y8la6h8n"]

[ext_resource type="Script" path="res://Classes/game.gd" id="1_cv5ps"]
[ext_resource type="Script" path="res://Scenes/Local_Multiplayer/local_multiplayer.gd" id="1_w84yu"]
[ext_resource type="Texture2D" uid="uid://c7gpfvd3321bj" path="res://Assets/Tiles/background.png" id="2_smxou"]
[ext_resource type="Script" path="res://Scenes/Local_Multiplayer/TerrainRenderer.gd" id="7_fqdo8"]
[ext_resource type="Texture2D" uid="uid://b41gbib33us0y" path="res://Assets/Tiles/fog.png" id="7_gkb7q"]
[ext_resource type="Script" path="res://Scenes/Local_Multiplayer/TopBarTextLabel.gd" id="7_v6a8q"]
[ext_resource type="Script" path="res://Scenes/Local_Multiplayer/ActionBar.gd" id="7_o65sn"]
[ext_resource type="Script" path="res://Scenes/Local_Multiplayer/camera.gd" id="8_gitxl"]
[ext_resource type="Texture2D" uid="uid://b52v80k5bqxl5" path="res://Assets/Tiles/opaque-outline.png" id="9_387iw"]
[ext_resource type="Script" path="res://Scenes/Local_Multiplayer/HandRenderer.gd" id="9_bv7jf"]
[ext_resource type="Texture2D" uid="uid://bgtd17unyo5em" path="res://Assets/UI/outline.png" id="10_j1qfw"]
[ext_resource type="Script" path="res://Scenes/Local_Multiplayer/MoveRender.gd" id="11_0mh2y"]
[ext_resource type="Texture2D" uid="uid://bfwcvluxqghk2" path="res://Assets/Tiles/thick-outline.png" id="11_bs2bu"]
[ext_resource type="Script" path="res://Scenes/Local_Multiplayer/FogRenderer.gd" id="11_i2gk8"]

[sub_resource type="TileSet" id="TileSet_m82yt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hh2ia"]
texture = ExtResource("7_gkb7q")
texture_region_size = Vector2i(64, 64)
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/terrains_peering_bit/bottom_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_side = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/bottom_left_corner = 0
5:0/0/terrains_peering_bit/left_side = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/terrains_peering_bit/right_side = 0
6:0/0/terrains_peering_bit/bottom_right_corner = 0
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/left_side = 0
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/terrain = 0
7:0/0/terrains_peering_bit/bottom_side = 0
7:0/0/terrains_peering_bit/left_side = 0
8:0/0 = 0
8:0/0/terrain_set = 0
8:0/0/terrain = 0
8:0/0/terrains_peering_bit/right_side = 0
8:0/0/terrains_peering_bit/bottom_side = 0
8:0/0/terrains_peering_bit/left_side = 0
9:0/0 = 0
9:0/0/terrain_set = 0
9:0/0/terrain = 0
9:0/0/terrains_peering_bit/right_side = 0
9:0/0/terrains_peering_bit/bottom_right_corner = 0
9:0/0/terrains_peering_bit/bottom_side = 0
9:0/0/terrains_peering_bit/left_side = 0
9:0/0/terrains_peering_bit/top_left_corner = 0
9:0/0/terrains_peering_bit/top_side = 0
10:0/0 = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/top_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/top_side = 0
4:1/0/terrains_peering_bit/top_right_corner = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/bottom_left_corner = 0
5:1/0/terrains_peering_bit/left_side = 0
5:1/0/terrains_peering_bit/top_left_corner = 0
5:1/0/terrains_peering_bit/top_side = 0
5:1/0/terrains_peering_bit/top_right_corner = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_right_corner = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/left_side = 0
6:1/0/terrains_peering_bit/top_left_corner = 0
6:1/0/terrains_peering_bit/top_side = 0
6:1/0/terrains_peering_bit/top_right_corner = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/left_side = 0
7:1/0/terrains_peering_bit/top_left_corner = 0
7:1/0/terrains_peering_bit/top_side = 0
8:1/0 = 0
8:1/0/terrain_set = 0
8:1/0/terrain = 0
8:1/0/terrains_peering_bit/right_side = 0
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/left_side = 0
8:1/0/terrains_peering_bit/top_left_corner = 0
8:1/0/terrains_peering_bit/top_side = 0
8:1/0/terrains_peering_bit/top_right_corner = 0
9:1/0 = 0
9:1/0/terrain_set = 0
9:1/0/terrain = 0
9:1/0/terrains_peering_bit/right_side = 0
9:1/0/terrains_peering_bit/bottom_side = 0
9:1/0/terrains_peering_bit/bottom_left_corner = 0
9:1/0/terrains_peering_bit/left_side = 0
9:1/0/terrains_peering_bit/top_side = 0
9:1/0/terrains_peering_bit/top_right_corner = 0
10:1/0 = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/top_side = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:2/0/terrains_peering_bit/right_side = 0
4:2/0/terrains_peering_bit/bottom_right_corner = 0
4:2/0/terrains_peering_bit/bottom_side = 0
4:2/0/terrains_peering_bit/top_side = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/terrain = 0
5:2/0/terrains_peering_bit/right_side = 0
5:2/0/terrains_peering_bit/bottom_right_corner = 0
5:2/0/terrains_peering_bit/bottom_side = 0
5:2/0/terrains_peering_bit/bottom_left_corner = 0
5:2/0/terrains_peering_bit/left_side = 0
5:2/0/terrains_peering_bit/top_left_corner = 0
5:2/0/terrains_peering_bit/top_side = 0
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/terrain = 0
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/bottom_right_corner = 0
6:2/0/terrains_peering_bit/bottom_side = 0
6:2/0/terrains_peering_bit/bottom_left_corner = 0
6:2/0/terrains_peering_bit/left_side = 0
6:2/0/terrains_peering_bit/top_side = 0
6:2/0/terrains_peering_bit/top_right_corner = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/terrain = 0
7:2/0/terrains_peering_bit/bottom_side = 0
7:2/0/terrains_peering_bit/bottom_left_corner = 0
7:2/0/terrains_peering_bit/left_side = 0
7:2/0/terrains_peering_bit/top_side = 0
8:2/0 = 0
8:2/0/terrain_set = 0
8:2/0/terrain = 0
8:2/0/terrains_peering_bit/right_side = 0
8:2/0/terrains_peering_bit/bottom_right_corner = 0
8:2/0/terrains_peering_bit/bottom_side = 0
8:2/0/terrains_peering_bit/bottom_left_corner = 0
8:2/0/terrains_peering_bit/left_side = 0
8:2/0/terrains_peering_bit/top_side = 0
9:2/0 = 0
9:2/0/terrain_set = 0
9:2/0/terrain = 0
9:2/0/terrains_peering_bit/right_side = 0
9:2/0/terrains_peering_bit/bottom_right_corner = 0
9:2/0/terrains_peering_bit/bottom_side = 0
9:2/0/terrains_peering_bit/left_side = 0
9:2/0/terrains_peering_bit/top_side = 0
10:2/0 = 0
10:2/0/terrain_set = 0
10:2/0/terrain = 0
10:2/0/terrains_peering_bit/right_side = 0
10:2/0/terrains_peering_bit/bottom_side = 0
10:2/0/terrains_peering_bit/bottom_left_corner = 0
10:2/0/terrains_peering_bit/left_side = 0
10:2/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/terrains_peering_bit/right_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/left_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/terrains_peering_bit/right_side = 0
4:3/0/terrains_peering_bit/top_side = 0
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/terrains_peering_bit/right_side = 0
5:3/0/terrains_peering_bit/left_side = 0
5:3/0/terrains_peering_bit/top_left_corner = 0
5:3/0/terrains_peering_bit/top_side = 0
6:3/0 = 0
6:3/0/terrain_set = 0
6:3/0/terrain = 0
6:3/0/terrains_peering_bit/right_side = 0
6:3/0/terrains_peering_bit/left_side = 0
6:3/0/terrains_peering_bit/top_side = 0
6:3/0/terrains_peering_bit/top_right_corner = 0
7:3/0 = 0
7:3/0/terrain_set = 0
7:3/0/terrain = 0
7:3/0/terrains_peering_bit/left_side = 0
7:3/0/terrains_peering_bit/top_side = 0
8:3/0 = 0
8:3/0/terrain_set = 0
8:3/0/terrain = 0
8:3/0/terrains_peering_bit/right_side = 0
8:3/0/terrains_peering_bit/left_side = 0
8:3/0/terrains_peering_bit/top_side = 0
9:3/0 = 0
9:3/0/terrain_set = 0
9:3/0/terrain = 0
9:3/0/terrains_peering_bit/right_side = 0
9:3/0/terrains_peering_bit/bottom_side = 0
9:3/0/terrains_peering_bit/left_side = 0
9:3/0/terrains_peering_bit/top_side = 0
9:3/0/terrains_peering_bit/top_right_corner = 0
10:3/0 = 0
10:3/0/terrain_set = 0
10:3/0/terrain = 0
10:3/0/terrains_peering_bit/right_side = 0
10:3/0/terrains_peering_bit/bottom_side = 0
10:3/0/terrains_peering_bit/left_side = 0
10:3/0/terrains_peering_bit/top_left_corner = 0
10:3/0/terrains_peering_bit/top_side = 0
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrain = 0
4:4/0/terrains_peering_bit/right_side = 0
4:4/0/terrains_peering_bit/bottom_side = 0
4:4/0/terrains_peering_bit/top_side = 0
5:4/0 = 0
5:4/0/terrain_set = 0
5:4/0/terrain = 0
5:4/0/terrains_peering_bit/right_side = 0
5:4/0/terrains_peering_bit/bottom_side = 0
5:4/0/terrains_peering_bit/bottom_left_corner = 0
5:4/0/terrains_peering_bit/left_side = 0
5:4/0/terrains_peering_bit/top_left_corner = 0
5:4/0/terrains_peering_bit/top_side = 0
6:4/0 = 0
6:4/0/terrain_set = 0
6:4/0/terrain = 0
6:4/0/terrains_peering_bit/right_side = 0
6:4/0/terrains_peering_bit/bottom_right_corner = 0
6:4/0/terrains_peering_bit/bottom_side = 0
6:4/0/terrains_peering_bit/left_side = 0
6:4/0/terrains_peering_bit/top_side = 0
6:4/0/terrains_peering_bit/top_right_corner = 0
7:4/0 = 0
7:4/0/terrain_set = 0
7:4/0/terrain = 0
7:4/0/terrains_peering_bit/bottom_side = 0
7:4/0/terrains_peering_bit/left_side = 0
7:4/0/terrains_peering_bit/top_side = 0
8:4/0 = 0
8:4/0/terrain_set = 0
8:4/0/terrain = 0
8:4/0/terrains_peering_bit/right_side = 0
8:4/0/terrains_peering_bit/bottom_side = 0
8:4/0/terrains_peering_bit/left_side = 0
8:4/0/terrains_peering_bit/top_side = 0
9:4/0 = 0
10:4/0 = 0
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0

[sub_resource type="TileSet" id="TileSet_ael6n"]
tile_size = Vector2i(64, 64)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Fog"
terrain_set_0/terrain_0/color = Color(0.709804, 0, 0.301961, 1)
sources/0 = SubResource("TileSetAtlasSource_hh2ia")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_quc2k"]
texture = ExtResource("9_387iw")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2u6sa"]
texture = ExtResource("10_j1qfw")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8ng1c"]
texture = ExtResource("11_bs2bu")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_yjrn2"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_quc2k")
sources/1 = SubResource("TileSetAtlasSource_2u6sa")
sources/2 = SubResource("TileSetAtlasSource_8ng1c")

[node name="LocalMultiplayer" type="Node2D"]
z_index = 10
script = ExtResource("1_w84yu")
metadata/_edit_horizontal_guides_ = [-128.0]

[node name="Game" type="Node" parent="."]
script = ExtResource("1_cv5ps")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_smxou")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 128, 128)
region_filter_clip_enabled = true

[node name="TerrainRenderer" type="TileMap" parent="."]
z_index = 1
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_m82yt")
format = 2
layer_0/tile_data = PackedInt32Array(65539, 65536, 0, 65538, 0, 0, 131074, 393216, 2, 131073, 0, 0, 196609, 0, 1, 196610, 65536, 1, 131075, 65536, 1, 196611, 65536, 1, 262147, 65536, 1, 262148, 65536, 1, 262149, 65536, 1, 262150, 65536, 1, 262151, 65536, 1, 262152, 131072, 1, 196616, 131072, 1, 131080, 131072, 0, 131079, 327680, 2, 131078, 65536, 1, 131077, 65536, 1, 131076, 65536, 1, 196614, 65536, 1, 196613, 65536, 1, 196612, 65536, 1, 196615, 65536, 1, 65543, 131072, 0, 65542, 65536, 0, 65541, 65536, 0, 65540, 65536, 0, 262146, 393216, 1, 262145, 0, 2, 327682, 0, 2, 327683, 65536, 2, 327684, 393216, 1, 393220, 0, 2, 393221, 131072, 2, 327685, 327680, 1, 327686, 65536, 2, 327687, 65536, 2, 327688, 327680, 3, 327689, 131072, 3, 196621, 131074, 0, 262157, 131074, 2, 262156, 65538, 2, 262155, 327682, 1, 327691, 131074, 2, 327690, 2, 2, 262154, 2, 1, 196618, 2, 1, 131082, 2, 0, 131083, 131074, 0, 196619, 327682, 2, 196620, 65538, 0)
layer_1/tile_data = PackedInt32Array()
script = ExtResource("7_fqdo8")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
position_smoothing_enabled = true
script = ExtResource("8_gitxl")

[node name="GUI_Renderer" type="CanvasLayer" parent="."]

[node name="HandRenderer" type="Control" parent="GUI_Renderer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 650.0
script = ExtResource("9_bv7jf")

[node name="ActionBar" type="Control" parent="GUI_Renderer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 548.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_o65sn")

[node name="MarginContainer" type="MarginContainer" parent="GUI_Renderer/ActionBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GUI_Renderer/ActionBar/MarginContainer"]
layout_mode = 2


[node name="MarginContainer" type="MarginContainer" parent="GUI_Renderer/ActionBar/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 15
theme_override_constants/margin_bottom = 15

[node name="TopBar" type="MarginContainer" parent="GUI_Renderer/Control"]
layout_mode = 0
offset_top = -550.0
offset_right = 1151.0
offset_bottom = -519.0

[node name="ColorRect" type="ColorRect" parent="GUI_Renderer/Control/TopBar"]
layout_mode = 2
color = Color(0.819608, 0.745098, 0.615686, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="GUI_Renderer/Control/TopBar/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 30.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
bbcode_enabled = true
script = ExtResource("7_v6a8q")

[node name="HBoxContainer" type="HBoxContainer" parent="GUI_Renderer/ActionBar/MarginContainer/ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Button" type="Button" parent="GUI_Renderer/ActionBar/MarginContainer/ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label" type="Label" parent="GUI_Renderer/ActionBar/MarginContainer/ColorRect/MarginContainer/HBoxContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="GUI_Renderer/ActionBar/MarginContainer/ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label" type="Label" parent="GUI_Renderer/ActionBar/MarginContainer/ColorRect/MarginContainer/HBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Claim"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Button" parent="GUI_Renderer/ActionBar/MarginContainer/ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label" type="Label" parent="GUI_Renderer/ActionBar/MarginContainer/ColorRect/MarginContainer/HBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "End Turn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FogRenderer" type="TileMap" parent="."]
z_index = 10
tile_set = SubResource("TileSet_ael6n")
format = 2
script = ExtResource("11_i2gk8")

[node name="MoveRender" type="TileMap" parent="."]
top_level = true
z_index = 9
tile_set = SubResource("TileSet_yjrn2")
format = 2
layer_0/z_index = 9
script = ExtResource("11_0mh2y")

[connection signal="render_topbar" from="Game" to="GUI_Renderer/Control/TopBar/ColorRect/RichTextLabel" method="_on_game_render_topbar"]
[connection signal="terrain_updated" from="Game" to="TerrainRenderer" method="render"]
[connection signal="troop_placed" from="Game" to="." method="render_troop"]
[connection signal="turn_ended" from="Game" to="GUI_Renderer/HandRenderer" method="switch_hands"]
[connection signal="turn_ended" from="Game" to="FogRenderer" method="switch_players"]
[connection signal="mouse_entered" from="GUI_Renderer/HandRenderer" to="Camera2D" method="_on_hand_renderer_mouse_entered"]
[connection signal="mouse_exited" from="GUI_Renderer/HandRenderer" to="Camera2D" method="_on_hand_renderer_mouse_exited"]
[connection signal="pressed" from="GUI_Renderer/ActionBar/MarginContainer/ColorRect/MarginContainer/HBoxContainer/Button3" to="Game" method="end_turn"]
